# Autonomous_Operations_Sim

./: .gitignore  AGENTS.md  README.md  demo_recovery_plan.md  pyproject.toml
autonomous_ops_sim/: api.py  authoring.py  cli.py  live_app.py  showcase.py
autonomous_ops_sim.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
demos/: demo_job.py  demo_routing.py  demo_showcase.py
docs/: README.md  architecture_v2.md  capability_spec.md  current_phase.md  current_task.md  execution_plan.md  frontend_architecture.md  operator_workflows.md  phase_b_acceptance_runbook.md  roadmap.md  step-10-behavior-layer.md  step-11-metrics-exports.md  step-13-scenario-schema-operations.md  step-14-vehicle-entity-model.md  step-15-evaluation-scenario-pack-harness.md  step-16-richer-operations-realism.md  step-17-coordination-upgrade.md  step-18-control-command-surface.md  step-19-visualization-state-surface-and-first-viewer.md  step-2-closure.md  step-20-interactive-manipulation-layer.md  step-21-environment-map-realism-expansion.md  step-22-optional-research-wrapper.md  step-23-graphical-replay-viewer-foundation.md  step-24-playback-control-maturity.md  step-25-live-control-loop-bridge.md  step-26-live-interactive-viewer-actions.md  step-27-streaming-state-sync-surface.md  step-28-visual-presentation-and-frontend-quality-upgrade.md  step-29-profiling-and-benchmark-harness.md  step-4-routing-refactor.md  step-5-engine.md  step-6-single-vehicle.md  step-7-jobs-tasks-resources.md  step-8-dispatcher.md  step-9-conflict-handling.md  target_vision.md  unity_hybrid_sim_spec.md  (+1 more)
(+213 files in other folders)
