[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autonomous_ops_sim"
version = "0.1.0"
description = "A Python simulator for autonomous operations research and development."
requires-python = ">=3.11"

[project.scripts]
autonomous-ops-sim = "autonomous_ops_sim.cli:main"
autonomous-ops-gui-viewer = "autonomous_ops_sim.visualization.gui_viewer:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.11"

[tool.setuptools.packages.find]
include = ["autonomous_ops_sim*"]
